definitions.

* Eisbach provides method "use" to modify the main facts of a given
method expression, e.g.

  (use facts in simp)
  (use facts in \<open>simp add: ...\<close>)


*** Pure ***

* Code generator: config option "code_timing" triggers measurements of
different phases of code generation. See src/HOL/ex/Code_Timing.thy for
examples.


*** HOL ***

* Former locale lifting_syntax is now a bundle, which is easier to
include in a local context or theorem statement, e.g. "context includes
lifting_syntax begin ... end". Minor INCOMPATIBILITY.

* Code generation for scala: ambiguous implicts in class diagrams
are spelt out explicitly.

* Abstract locales semigroup, abel_semigroup, semilattice,
semilattice_neutr, ordering, ordering_top, semilattice_order,
semilattice_neutr_order, comm_monoid_set, semilattice_set,
semilattice_neutr_set, semilattice_order_set, semilattice_order_neutr_set
monoid_list, comm_monoid_list, comm_monoid_list_set, comm_monoid_mset,
comm_monoid_fun use boldified syntax uniformly that does not clash
with corresponding global syntax.  INCOMPATIBILITY.

* Conventional syntax "%(). t" for unit abstractions.  Slight syntactic
INCOMPATIBILITY.

* Command 'code_reflect' accepts empty constructor lists for datatypes,
which renders those abstract effectively.

* Command 'export_code' checks given constants for abstraction violations:
a small guarantee that given constants specify a safe interface for the
generated code.

* Probability/Random_Permutations.thy contains some theory about 
choosing a permutation of a set uniformly at random and folding over a 
list in random order.

* Probability/SPMF formalises discrete subprobability distributions.

* Library/FinFun.thy: bundles "finfun_syntax" and "no_finfun_syntax"
allow to control optional syntax in local contexts; this supersedes
former Library/FinFun_Syntax.thy. INCOMPATIBILITY, e.g. use "unbundle
finfun_syntax" to imitate import of "~~/src/HOL/Library/FinFun_Syntax".
